Changes in the Slider, in the Display widgets allowing swap of widgets, in the manual page (still with the issue) and cleaning of the Review page

--- a/DoradSmartphone/Views/DisplaySelectedItemsPage.xaml
+++ b/DoradSmartphone/Views/DisplaySelectedItemsPage.xaml
@@ -7,17 +7,20 @@
              Title="{Binding Title}">
 
     <ContentPage.Content>
-        <StackLayout Padding="20" Spacing="10">
-            <Label Text="Selected Widgets" FontSize="20" HorizontalOptions="Center" />
-            <ListView ItemsSource="{Binding SelectedItems}" SelectionMode="None">
-                <ListView.ItemTemplate>
+        <StackLayout Padding="20" Spacing="50">
+            <Label Text="Reorder Widgets With Drag and Drop" FontSize="20" HorizontalOptions="Center" />
+            <CollectionView ItemsSource="{Binding SelectedItems}" SelectionMode="None">
+                <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:Widget">
-                        <ViewCell>
-                            <Grid RowSpacing="80">
+                        <Frame BorderColor="Gray" Padding="5" Margin="5">
+                            <Grid ColumnSpacing="10">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
                                 <Grid.GestureRecognizers>
                                     <DragGestureRecognizer DragStartingCommand="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:DisplaySelectedItemsViewModel}}, Path=DragStartedCommand}" 
                                                   DragStartingCommandParameter="{Binding .}" 
@@ -26,17 +29,17 @@
                                                   DropCommandParameter="{Binding .}" 
                                                                AllowDrop="True"/>
                                 </Grid.GestureRecognizers>
-                                <Image Source="{Binding FileName}" WidthRequest="60" HeightRequest="60"
+                                <Image Source="{Binding FileName}" WidthRequest="50" HeightRequest="50"
                                        VerticalOptions="Center" Grid.RowSpan="2" />
 
                                 <Label Text="{Binding Name}" FontSize="15" VerticalOptions="Center" 
                                            Grid.Column="1" Grid.Row="0" />
                             </Grid>
-                        </ViewCell>
+                        </Frame>
                     </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Spacing="10">
                 <Button Text="Manual" Command="{Binding ManualCommand}" Margin="5" />
                 <Button Text="Automatic" Command="{Binding AutomaticCommand}" Margin="5" />
             </StackLayout>
