Creation of the listener for bluetooth and the ControlDevicePage to start/stop the run

--- a/DoradSmartphone/Views/AutomaticPage.xaml
+++ b/DoradSmartphone/Views/AutomaticPage.xaml
@@ -67,7 +67,7 @@
 
             <!-- Second Grid with 12% height -->
             <Grid Grid.Row="1" Margin="10" x:Name="ButtonGrid">
-                <Button Text="Review" WidthRequest="100" CornerRadius="40" HorizontalOptions="Center" 
+                <Button Text="Send" WidthRequest="100" CornerRadius="40" HorizontalOptions="Center" 
                                 Command="{Binding ReviewPageCommand}" Margin="10" 
                                 FontSize="15"/>
             </Grid>
