--- a/DoradSmartphone/Views/ExercisePage.xaml
+++ b/DoradSmartphone/Views/ExercisePage.xaml
@@ -8,54 +8,67 @@
              xmlns:sensors="clr-namespace:Microsoft.Maui.Devices.Sensors;assembly=Microsoft.Maui.Essentials"
              x:DataType ="viewmodel:ExerciseViewModel"
              Title="{Binding Title}">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="ButtonContainerStyle" TargetType="Button">
+                <Setter Property="CornerRadius" Value="20" />
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="FontSize" Value="15" />
+                <Setter Property="HeightRequest" Value="40" />
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
-
-    <Grid Padding="5" Margin="5" RowSpacing="5" ColumnSpacing="3">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="150"/>
-        </Grid.RowDefinitions>
-
-        <maps:Map Grid.Row="0" x:Name="routeMap" VerticalOptions="CenterAndExpand" Grid.ColumnSpan="3" HeightRequest="400" IsZoomEnabled="True" IsEnabled="False">
-            <x:Arguments>
-                <MapSpan>
-                    <x:Arguments>
-                        <sensors:Location>
-                            <x:Arguments>
-                                <x:Double>38.744418137669875</x:Double>
-                                <x:Double>-9.128544160596851</x:Double>
-                            </x:Arguments>
-                        </sensors:Location>
-                        <x:Double>1</x:Double>
-                        <x:Double>1</x:Double>
-                    </x:Arguments>
-                </MapSpan>
-            </x:Arguments>
-        </maps:Map>
-        <RefreshView IsRefreshing="{Binding IsRefreshing}" Command="{Binding RefreshCommand}" Grid.Row="1">
-            <RefreshView.Content>
-                <CarouselView ItemsSource="{Binding Exercises}"  PeekAreaInsets="200">
-                    <CarouselView.ItemTemplate>
-                        <DataTemplate x:DataType="model:Exercise">
-                            <Frame HeightRequest="150" Margin="5">
-                                <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer Tapped="OnTapGestureRouteUpdate" CommandParameter="{Binding .}" />
-                                </Frame.GestureRecognizers>
-                                <StackLayout>
-                                    <Label Text="{Binding StartingDate, StringFormat='Starting Date: {0:dd/MM/yyyy HH:mm}'}" />
-                                    <Label Text="{Binding Time, StringFormat='Time: {0} '}" />
-                                    <Label Text="{Binding Speed.Avg, StringFormat='Avg Speed: {0}'}" />
-                                    <Label Text="{Binding StartingAddress, StringFormat='Starting Address: {0}'}" />
-                                    <Label Text="{Binding FinishingAddress, StringFormat='Finishing Address: {0}'}" />
-                                </StackLayout>
-                            </Frame>
-                        </DataTemplate>
-                    </CarouselView.ItemTemplate>
-                </CarouselView>
-            </RefreshView.Content>
-        </RefreshView>
-        <ActivityIndicator IsRunning="{Binding IsLoading}" IsVisible="{Binding IsLoading}"
-                               HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="1"/>
-    </Grid>
-
+    <RefreshView IsRefreshing="{Binding IsRefreshing}" Command="{Binding RefreshCommand}">
+        <RefreshView.Content>
+            <ScrollView>
+                <StackLayout>
+                    <Grid VerticalOptions="Center" HorizontalOptions="Center" RowSpacing="15">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <CollectionView ItemsSource="{Binding Exercises}" Grid.Row="0" Grid.ColumnSpan="2">
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate x:DataType="model:Exercise">
+                                    <Frame BorderColor="RoyalBlue" Padding="10" Margin="5">
+                                        <Grid>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*" />
+                                                <ColumnDefinition Width="Auto" />
+                                                <ColumnDefinition Width="Auto" />
+                                            </Grid.ColumnDefinitions>
+                                            <StackLayout Grid.Row="0" Grid.Column="0">
+                                                <Label Text="{Binding StartingDate, StringFormat='Starting Date: {0:dd/MM/yyyy}'}" />
+                                                <Label Text="{Binding Time, StringFormat='Time: {0:HH:mm:ss}'}" />
+                                                <Label Text="{Binding StartingAddress, StringFormat='Address: {0}'}" />
+                                            </StackLayout>
+                                            <Button Text="Visualize" Grid.Row="0" Grid.Column="1" 
+                                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExerciseViewModel}}, Path=ExerciseDetailsCommand}" 
+                                                    CommandParameter="{Binding .}" 
+                                                    Style="{StaticResource ButtonContainerStyle}"/>
+                                            <Button Text="Delete" Grid.Row="0" Grid.Column="2" 
+                                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExerciseViewModel}}, Path=DeleteExerciseCommand}" 
+                                                    CommandParameter="{Binding .}" 
+                                                    BackgroundColor="Red" Style="{StaticResource ButtonContainerStyle}"/>
+                                        </Grid>
+                                    </Frame>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </Grid>
+                    <ActivityIndicator IsRunning="{Binding IsLoading}" IsVisible="{Binding IsLoading}"
+                                       HorizontalOptions="Center" VerticalOptions="Center" />
+                </StackLayout>
+            </ScrollView>
+        </RefreshView.Content>
+    </RefreshView>
 </ContentPage>
